2007-07-01  Emmanuele Bassi  <ebassi@openedhand.com>

	Merge from clutter.git/work branch

	* clutter/clutter-effect.[ch]: Clean up ClutterEffect; use a
	pointer to access the private data structure, instead of doing
	a type check every time. Add description for the API reference.

	* docs/reference/clutter-sections.txt:
	* clutter/*.[ch]: Add various documentation fixes.

	* clutter/clutter-entry.c: Remove a stray g_print() call.

2007-06-29  Neil J. Patel  <njp@o-hand.com>

	* clutter/clutter-entry.c: (clutter_entry_handle_key_event),
	(clutter_entry_add), (clutter_entry_remove):
	Check if unichar == 0, and if so, return, as it will cause a delete in
	the GString.

2007-06-29  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c: (texture_upload_data):
	Fix a SEGV for GL ES textures.
	
	* clutter/cogl/gles/cogl.c: (cogl_setup_viewport):
	Tweak default z_camera for 60 degrees like GL.

	* clutter/egl/clutter-backend-egl.c::
	* clutter/egl/clutter-stage-egl.c:
	Fix edpy usage (thanks to Kaj Gronholm).

2007-06-29  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-group.c:
	(clutter_group_query_coords):
	Fixed box calculation.
	
2007-06-28  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-group.c:
	(clutter_group_raise):
	(clutter_group_lower):
	Fixed SIGSEGV when attempting to raise / lower an only child.
	
2007-06-28  Matthew Allum  <mallum@openedhand.com>

	* clutter/cogl/gl/cogl.c: (cogl_setup_viewport):
	Improve fixed z_camera value for defualt perspective.
	Appears pixel perfect on ATI and Intel at least

2007-06-28  Tomas Frydrych  <tf@openedhand.com>

	* tests/test-perspective.c:
	Moved red dots to be positioned 1px off each corner.
	
2007-06-28  Matthew Allum  <mallum@openedhand.com>

	* tests/Makefile.am:
	* tests/test-perspective.c:
	Add simple perspective test

2007-06-27  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.h:
	* clutter/clutter-actor.c:
	* tests/test-project.c: